fixed centering nav on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -170,6 +170,7 @@ nav {
   nav {
     text-align: center;
     margin-top: 1rem;
+    width: 100%;
   }
 }
 
